--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <h1>This is my website</h1>
+        
     </head>
     <body>
-
+        <object data="FrontEnd/login.html" type="text/html"></object>
     </body>
 </html>
