--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -1,10 +1,15 @@
 <html>
     <head>
+        <title>Login</title>
+		<meta charset="utf-8">
         <link rel="stylesheet" href="STYLE/login.css">
     </head>
     <body>
-        <div class="New">
-            Hello World
+        <div class="box">
+            
+        </div>
+        <div class="aaa">
+
         </div>
     </body>
 </html>
