--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Login</title>
 		<meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="FrontEnd/STYLE/login.css">
     </head>
     <body>
-        <object data="FrontEnd/login.html" type="text/html"></object>
+        <div class="box">
+            <div class="halfL">
+
+            </div>
+            <div class="halfR">
+              <h1>Login</h1>
+              <span></span>
+            </div>
+        </div>
+        <div class="aaa">
+
+        </div>
     </body>
 </html>
