--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
             </div>
             <div class="halfR">
               <h1>Login</h1>
-              <span></span>
+              <form action="">
+                 <div class="mail" required>
+                    <input type="text" placeholder="Username or Email">
+                 </div>
+                 <div class="pass">
+                    <input type="text" placeholder="Password">
+                 </div>
+              </form>
             </div>
-        </div>
-        <div class="aaa">
-
         </div>
     </body>
 </html>
