--- a/index.html
+++ b/index.html
@@ -3,23 +3,14 @@
     <head>
         <title>Login</title>
 		<meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="FrontEnd/STYLE/login.css">
+        <link rel="stylesheet" href="FrontEnd/STYLE/login.css">
     </head>
     <body>
-        <div class="box">
-            <div class="halfL">
-
-            </div>
-            <div class="halfR">
-              <h1>Login</h1>
-              <form action="">
-                 <div class="mail" required>
-                    <input type="text" placeholder="Username or Email">
-                 </div>
-                 <div class="pass">
-                    <input type="text" placeholder="Password">
-                 </div>
-              </form>
+        <div class="limiter">
+            <div class="container" style="background-image: url('Images/log.png');">
+                <div class="box">
+                    <h1>Login</h1>
+                </div>
             </div>
         </div>
     </body>
