--- a/register.html
+++ b/register.html
@@ -11,19 +11,66 @@
                     <h1>Register to [WEBSITE]</h1>
                     <div class="column">
                         <div class="clm">
-                            <label for="Fname">First Name</label>
-                            <input type="text" name="Fname" placeholder="Enter your First Name">
-                            <label for="Fname">Last Name</label>
-                            <input type="text" name="Fname" placeholder="Enter your First Name">
+                            <form onsubmit="return checkForm();" id="myForm">
+                                <label for="Fname">First Name</label>
+                                <input type="text" name="Fname" placeholder="Enter your First Name">
+                                <label for="Mname">Middle Name</label>
+                                <input type="text" name="Mname" placeholder="Enter your Middle Name">
+                                <label for="Lname">Last Name</label>
+                                <input type="text" name="Lname" placeholder="Enter your Last Name">
+                                <label for="email">Email</label>
+                                <input type="text" name="email" placeholder="Enter your @email">
+                                <label for="cemail">Confirm Email</label>
+                                <input type="text" name="cemail" placeholder="Confirm @email">
+                                <label for="user">Username</label>
+                                <input type="text" name="user" placeholder="Enter your Username">
+                                <label for="pass">Password</label>
+                                <input type="text" name="pass" placeholder="Must be 4 characters long">
+                                <label for="cpass">Confirm Password</label>
+                                <input type="text" name="cpass" placeholder="Confirm Password">
+                            </form>
                         </div>
                         <div class="clm">
-                            <label for="Fname">First Name</label>
-                            <input type="text" name="Fname" placeholder="Enter your First Name">
+                            <form>
+                                <label for="occup">Occupation</label>
+                                <input type="text" name="occup" placeholder="Enter your Occupation">
+                                <label for="address">Address</label>
+                                <textarea name="address" placeholder="Enter your Address" class="address-input"></textarea>
+                                <!--
+                                <div class="gnd">
+                                    <label for="javascript">Gender</label>
+                                    <br>
+                                    <br>
+                                    <input type="radio" name="gender"> Male
+                                    <input type="radio" name="gender"> Female
+                                </div>
+                                -->
+                                <label for="day">Birth Date</label>
+                                <input type="date" name="day" id="day" placeholder="mm/dd/yyyy" oninput="updateBirthdayText(this.value)" class="date">
+                                <button type="submit">Register!</button>
+                            </form>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
+        <script>
+            function checkForm() {
+                var email = document.getElementById("email").value;
+                var confirmEmail = document.getElementById("confirmEmail").value;
+                var password = document.getElementById("password").value;
+                var confirmPassword = document.getElementById("confirmPassword").value;
+                var errorMessage = document.getElementById("errorMessage");
+                var form = document.getElementById("myForm");
+
+                if (email !== confirmEmail || password !== confirmPassword || !email || !confirmEmail || !password || !confirmPassword) {
+                    errorMessage.style.display = "block";
+                    return false;
+                } else {
+                    errorMessage.style.display = "none";
+                    return true;
+                }
+            }
+        </script>
     </body>
 </html>
