--- a/index.html
+++ b/index.html
@@ -26,15 +26,11 @@
                         </div>
                         <div class="c2">
                             <button type="button" onclick="openReg()">Register</button>
-                            <script>
-                                function openReg() {
-                                    window.location.href = "register.html";
-                                }
-                            </script>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <script src="Scripts/login.js"></script>
     </body>
 </html>
