--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="FrontEnd/STYLE/index.css">
 </head>
 <body>
+    <script src="Scripts/index.js"></script>
     <nav class="navbar">
         <ul class="nav-menu">
             <li><a href="#" class="active">Home</a></li>
@@ -13,8 +14,8 @@
             <li><a href="#">Feedback</a></li>
         </ul>
         <div class="auth-buttons">
-            <a href="#" class="register-button">Register</a>
-            <a href="#" class="login-button">Login</a>
+            <a href="#" class="register-button" onclick="openReg()">Register</a>
+            <a href="#" class="login-button" onclick="openLog()">Login</a>
         </div>
     </nav>
     <div class="content" style="background-image: url('FrontEnd/Images/home.png');">
