--- a/index.html
+++ b/index.html
@@ -8,17 +8,69 @@
     <script src="Scripts/index.js"></script>
     <nav class="navbar">
         <ul class="nav-menu">
-            <li><a href="#" class="active">Home</a></li>
-            <li><a href="#">Online Form</a></li>
-            <li><a href="#">Event</a></li>
-            <li><a href="#">Feedback</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="form.html">Online Form</a></li>
+            <li><a href="event.html">Event</a></li>
+            <li><a href="feedback.html">Feedback</a></li>
         </ul>
         <div class="auth-buttons">
             <a href="#" class="register-button" onclick="openReg()">Register</a>
             <a href="#" class="login-button" onclick="openLog()">Login</a>
         </div>
     </nav>
-    <div class="content" style="background-image: url('FrontEnd/Images/home.png');">
+    <div class="content" style="background: linear-gradient(45deg, pink, blue, purple);">
+
+        <div class="center">
+            <h1 style="font-size:4vw;">
+            <p style="background-image: url('bg 2.jpg');">
+            WHAT IS A HEALTH CENTER?
+            </p>
+            </h1>
+            <h2 style="font-size:2vw;" >
+            Learn With Us
+            </p>
+            </h2>
+        </div>
+
+        <div class="center">
+            <h1 style="font-size:3vw;">
+            Featured Programs
+            </h1>
+            <div class="responsive">
+                <div class="gallery">
+                    <a target="_blank" href="FrontEnd/Images/pic1.jpg">
+                        <img src="FrontEnd/Images/pic1.jpg" alt="House Tour 1" width="600" height="400">
+                    </a>
+                <div class="desc">Program One</div>
+            </div>
+        </div>
+
+        <div class="responsive">
+            <div class="gallery">
+                <a target="_blank" href="FrontEnd/Images/pic2.png">
+                    <img src="FrontEnd/Images/pic2.png" alt="House Tour 2" width="600" height="400">
+                </a>
+              <div class="desc">Program Two</div>
+            </div>
+        </div>
+
+        <div class="responsive">
+            <div class="gallery">
+                <a target="_blank" href="FrontEnd/Images/pic3.jpg">
+                    <img src="FrontEnd/Images/pic3.jpg" alt="House Tour 3" width="600" height="400">
+                </a>
+                <div class="desc">Program Three</div>
+            </div>
+        </div>
+
+        <div class="responsive">
+            <div class="gallery">
+                <a target="_blank" href="FrontEnd/Images/pic4.jpg">
+                    <img src="FrontEnd/Images/pic4.jpg" alt="House Tour 3" width="600" height="400">
+                </a>
+                <div class="desc">Program Four</div>
+            </div>
+        </div>
 
     </div>
 </body>
