--- a/adminlogin.html
+++ b/adminlogin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Login</title>
+    <title>Admin Login</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="FrontEnd/STYLE/login.css">
 </head>
@@ -9,30 +9,24 @@
     <div class="limiter">
         <div class="container" style="background-image: url('FrontEnd/Images/log.png');">
             <div class="box">
-                <h1>Login</h1>
-                <form action="login.php" method="post">
+                <h1>Admin Login</h1>
+                <form id="loginForm">
                     <div class="input1">
                         <input name="username" type="text" placeholder="Username" required>
                     </div>
                     <div class="input2">
                         <input name="password" type="password" placeholder="Password" required>
                     </div>
-                    <div class="checkbox">
-                        <input class="input3check" type="checkbox" name="remember-me">
-                        <label>Remember me (not yet working)</label>
-                    </div>
                     <div class="logreg">
                         <div class="c1">
-                            <button type="submit">Login</button>
-                        </div>
-                        <div class="c2">
-                            <button type="button" onclick="openReg()">Register</button>
+                            <button type="button" onclick="login()">Login</button>
                         </div>
                     </div>
                 </form>
             </div>
         </div>
     </div>
-    <script src="Scripts/login.js"></script>
+    <script src="Scripts/adminlogin.js">
+    </script>
 </body>
 </html>
