--- a/register.html
+++ b/register.html
@@ -1,59 +1,60 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Register</title>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="FrontEnd/STYLE/register.css">
-    </head>
-    <body>
-        <script src="/Scripts/register.js"></script>
-        <div class="limiter">
-            <div class="container" style="background-image: url('FrontEnd/Images/reg.png');">
-                <div class="box">
-                    <h1>Register to [WEBSITE]</h1>
-                    <div class="column">
-                        <div class="clm">
-                            <form onsubmit="return checkForm();" id="myForm">
-                                <label for="Fname">Your Name</label>
-                                <input type="text" name="Fname" placeholder="SURNAME, Given, Initials">
-                                <label for="user">Username</label>
-                                <input type="text" name="user" placeholder="Enter your Username">
-                                <label for="email">Email</label>
-                                <input type="text" name="email" placeholder="Enter your @email">
-                                <label for="cemail">Confirm Email</label>
-                                <input type="text" name="cemail" placeholder="Confirm @email">
-                                <label for="pass">Password</label>
-                                <input type="password" name="pass" placeholder="Must be 4 characters long">
-                                <label for="cpass">Confirm Password</label>
-                                <input type="password" name="cpass" placeholder="Confirm Password">
-                            </form>
-                        </div>
-                        <div class="clm">
-                            <form>
-                                <label for="occup">Occupation</label>
-                                <input type="text" name="occup" placeholder="Enter your Occupation">
-                                <label for="address">Address</label>
-                                <textarea name="address" placeholder="#, Street, Postal Code, City" class="address-input"></textarea>
-                                <label for="day">Birth Date</label>
-                                <input type="date" name="day" id="day" placeholder="mm/dd/yyyy" oninput="updateBirthdayText(this.value)" class="date">
-                                <div class="gnd">
-                                    <label for="gender">Gender</label>
-                                    <br>
-                                    <br>
-                                    <input type="radio" name="gender"> Male
-                                    <input type="radio" name="gender"> Female
-                                    <input type="radio" name="gender"> Prefer not to say
-                                </div>
+<head>
+    <title>Register</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="FrontEnd/STYLE/register.css">
+    <script src="/Scripts/register.js"></script>
+</head>
+<body>
+    <div class="limiter">
+        <div class="container" style="background-image: url('FrontEnd/Images/reg.png');">
+            <div class="box">
+                <h1>Register to [WEBSITE]</h1>
+                <div class="column">
+                    <div class="clm">
+                        <form action="register.php" method="post" onsubmit="return checkForm();" id="myForm">
+                            <label for="Fname">Your Name</label>
+                            <input type="text" name="Fname" placeholder="SURNAME, Given, Initials" required>
+                            <label for="user">Username</label>
+                            <input type="text" name="user" placeholder="Enter your Username" required>
+                            <label for="email">Email</label>
+                            <input type="text" id="email" name="email" placeholder="Enter your email" required>
+                            <label for="cemail">Confirm Email</label>
+                            <input type="text" id="confirmEmail" name="cemail" placeholder="Confirm your email" required>
+                            <label for="pass">Password</label>
+                            <input type="password" id="password" name="pass" placeholder="Must be 4 characters long" required>
+                            <label for="cpass">Confirm Password</label>
+                            <input type="password" id="confirmPassword" name="cpass" placeholder="Confirm Password" required>
+                        </form>
+                    </div>
+                    <div class="clm">
+                        <form>
+                            <label for="occup">Occupation</label>
+                            <input type="text" name="occup" placeholder="Enter your Occupation" required>
+                            <label for="address">Address</label>
+                            <textarea name="address" placeholder="#, Street, Postal Code, City" class="address-input" required></textarea>
+                            <label for="day">Birth Date</label>
+                            <input type="date" name="day" id="day" placeholder="mm/dd/yyyy" oninput="updateBirthdayText(this.value)" class="date" required>
+                            <div class="gnd">
+                                <label for="gender">Gender</label>
                                 <br>
                                 <br>
-                                <div class="bc">
-                                    <button type="submit" class="check">Check Avail</button>
-                                    <button type="submit" class="regis">Register!</button>
-                                </div>
-                            </form>
-                        </div>
+                                <input type="radio" name="gender" required> Male
+                                <input type="radio" name="gender" required> Female
+                                <input type="radio" name="gender" required> Prefer not to say
+                            </div>
+                            <br>
+                            <br>
+                            <div class="bc">
+                                <button type="button" class="check" onclick="redirectToAdminLogin()">Admin</button>
+                                <button type="submit" class="regis" form="myForm">Register!</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
-    </body>
+    </div>
+</body>
 </html>
